--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.7.5",
     "pug": "^2.0.3",
-    "sequelize": "^5.6.1"
+    "sequelize": "^5.6.1",
+    "ws": "^8.6.0"
   },
   "devDependencies": {
     "child_process": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
+    "koa-body": "^5.0.0",
     "nodemon": "^1.19.4"
   }
 }
